# demo-environment

./: .gitignore  .last_prefix  AI-KIP_Tone_of_Voice_Table.csv  ARCHITECTURE.md  DATA_INGESTION_CAPABILITIES.md  DEMO.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRESENTATION.md  PRODUCTION_DEPLOYMENT_PLAN.md  README.md  ROADMAP.md  SCHEDULED_WORK.md  SUMMARY.md  TRANSLATION_COMPLETE.md  UsersmamowiClientsAI-KIPschema.json  docker-compose.yml  linkedin_contacts_37_companies.csv  pyproject.toml
.github/workflows/: scheduled-implementation.yml
Styleguide/: AI-KIP-STYLEGUIDE.md
Target Lists consolidated/01_hubspot_import/: hubspot_companies_import.csv  hubspot_companies_import_benelux.csv  hubspot_contacts_import.csv  hubspot_contacts_import_benelux.csv
Target Lists consolidated/02_master_lists/: master_target_list_benelux.csv  master_target_list_final.csv  master_target_list_phase1.csv
Target Lists consolidated/03_gaps_and_enrichment/: hubspot_gaps_report.csv  hubspot_gaps_report_benelux.csv
Target Lists consolidated/04_processing_scripts/: benelux_consolidate.py  (+3 more)
Target Lists unconsolidated/: AI-KIP_Prospecting_100_DACH_Companies.csv  DACH_Mittelstand_B2B_Manufacturers_ICP_List.md  DACH_Small_Hidden_Champions_10-50M.md  Target list for additional Reserach.xlsx  Top Familienunternehmen DACH V6 100Mio-1Mrd.xlsx  Zollernalbkreis_Sales_Contacts.csv  Zollernalbkreis_Sales_Contacts_Complete.csv  dach_10_50m_targets.csv  dach_icp_targets.csv  dach_mittelstand_manufacturers_to_source.csv  dach_si_impact_top100.csv
api/: index.py
carousel-template/: AI-KIP LINKEDIN CAROUSELS final.txt  CAROUSEL-CONTENT-EN-v3.txt  TEMPLATE-carousel.html  carousel-1-ai-paradox.html  carousel-2-time-wasters.html  carousel-3-95-5-rule.html  carousel-4-scaling.html  carousel-5-outreach.html  carousel-6-roi.html
competitive-intelligence/: README.md  action-plan-benelux.html  action-plan-nordics.html  action-plan.html
data-backbone/: DEV_PROCESS.md  PRODUCTION_DEPLOYMENT_PLAN.md  deploy.sh
knowledge-base/: README.md
scripts/: generate_signals_data.py  generate_synthetic_data.py  scheduled-implementation.sh  setup-tonight.sh
(+362 files in other folders)
